plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.iuha'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    /* Spring Security */
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    /* OAuth */
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation 'com.google.api-client:google-api-client:2.6.0'
    implementation 'org.springframework.security:spring-security-oauth2-resource-server'

    /* JPA */
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    /* jsoup */
    implementation group: 'org.jsoup', name: 'jsoup', version: '1.15.3'

    /* thymeleaf */
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    /* log4j */
    implementation 'org.apache.logging.log4j:log4j-api:2.23.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.23.1'

    /* Lombok */
    compileOnly "org.projectlombok:lombok"
    annotationProcessor "org.projectlombok:lombok"

    /* hibernate */
    runtimeOnly 'com.h2database:h2'

    /** redis */
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    /* mysql */
    runtimeOnly 'com.mysql:mysql-connector-j'

    /* messaging */
    implementation 'org.springframework:spring-messaging:6.2.5'
    implementation 'org.springframework.boot:spring-boot-starter-websocket:3.4.4'
    implementation 'org.webjars:stomp-websocket:2.3.4'

    /* jackson */
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    /* rabbitmq */
    implementation 'org.springframework.amqp:spring-rabbit:3.2.4'

    /* querydsl */
    implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
    testImplementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
    testAnnotationProcessor 'com.querydsl:querydsl-apt:5.1.0:jakarta'

    /* jakarta */
    annotationProcessor "jakarta.annotation:jakarta.annotation-api"
    annotationProcessor "jakarta.persistence:jakarta.persistence-api"

}

tasks.named('test') {
    useJUnitPlatform()
}

clean {
    delete file('src/main/generated')
}